--- a/src/index.html
+++ b/src/index.html
@@ -2,12 +2,15 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
-  <title>BitworksTest</title>
+  <title>Bit works Test</title>
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
+  <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+  <link href="./assets/css/materialize.css" rel="stylesheet" type="text/css">
 </head>
 <body>
   <app-root></app-root>
+<script src="./assets/js/materialize.js"></script>
 </body>
 </html>
